<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Earify</string>
    <string name="title_activity_main">Earify</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="team_name">Gruppo 2</string>
    <string name="noImgDesc">Numero Immagini</string>
    <string name="siftCheckLbl">SIFT</string>
    <string name="lbpCheckLbl">LBP</string>
    <string name="title_activity_browse_picture">BrowsePictureActivity</string>
    <string name="select_pictures">Add picture</string>
    <string name="username_ph">Enter your username</string>
    <string name="fake_quality_ph">Enter (fake) quality</string>
    <string name="register_btn">Register</string>
    <string name="verify_btn">Verify</string>
    <string name="recognition_btn">Recognize</string>
    <string name="go_btn">Extract features</string>
    <string name="title_activity_browse">BrowseActivity</string>
    <string name="radio_sx">sx</string>
    <string name="radio_dx">dx</string>
    <string name="quality_value">1</string>

</resources>
