<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.unisa.earify.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/team_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_images"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/ear_sx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="sx" />

        <RadioButton
            android:id="@+id/ear_dx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="dx" />
    </RadioGroup>

    <Button
        android:id="@+id/go_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/go_btn" />

    <EditText
        android:id="@+id/fake_quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/fake_quality_ph"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fake_quality"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/username_ph" />

    <RadioGroup
        android:id="@+id/action_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_tv"
        android:layout_centerHorizontal="true" >

        <RadioButton
            android:id="@+id/register_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/register_btn" />

        <RadioButton
            android:id="@+id/verify_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_btn" />

        <RadioButton
            android:id="@+id/recognition_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recognition_btn" />
    </RadioGroup>

    <Button
        android:id="@+id/select_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/select_pictures" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/go_btn"
        android:layout_marginTop="22dp"
        android:layout_toLeftOf="@+id/select_images"
        android:text="TextView" />

</RelativeLayout>